packages/portal-style/src/modules/_post-content.scss
.dp-po-post-content {
  font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
  line-height: 1.75;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;

  p {
    margin: 0.67em 0;
    line-height: 1.75;
  }

  p:first-child {
    margin-top: 0;
  }

  p,
  ul,
  ol {
    margin-bottom: 0.67em;
  }

  ol,
  ul {
    padding: 0 0 0 20px;
  }

  li {
    margin-top: 5px;
  }

  h2,
  h3,
  h4,
  h5,
  h6 {
    font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
    margin: 0.75em 0 0.25em;
    font-weight: 600;
    line-height: 1.28571429em;
    ;
  }

  h2 {
    font-size: 1.5em;
    font-weight: normal;
  }

  h3 {
    font-size: 1.3em;
  }

  h4 {
    font-size: 1.15em;
  }

  h5 {
    font-size: 1.1em;
  }

  img {
    max-width: 100%;
  }

  p:last-child {
    margin-top: 0;
  }

  blockquote {
    margin: 0.75em 0;
    border-left: 3px solid rgba(0, 0, 0, 0.1);
    padding: 0.5em 1em;
    background: rgba(0, 0, 0, 0.02);
    font-style: italic;
    color: #9D9D9D;
  }

  &-note,
  &-warning {
    background: $info-light;
    border-radius: 4px;
    border: 1px solid $info;
    padding: 20px;
    margin-bottom: 1.5rem;

    & > p {
      padding-left: 30px;
    }

    &-title {
      display: flex;
      align-items: center;
      color: $info;
      @include typo($s19, 500, 'head');

      .dp-po-icon {
        margin-right: 10px;
      }
    }
  }

  &-warning {
    background-color: $warning-light;
    border-color: $warning;
    &-title {
      color: $warning;
    }
  }


  &-figure {
    padding: 10px;
    border: 1px solid $grey-light;
    margin-bottom: 1.5rem;
  }

  :not(pre)>code {
    padding: 0.1em 0.25em;
    background: rgba(0, 0, 0, 0.01);
    border: 1px solid rgba(0, 0, 0, 0.05);
    border-radius: 3px;
    color: #404040;
    font-size: 100%;
  }

  &-code {
    background: $grey-lightest;
    border: 1px solid $grey-light;
    border-radius: 4px;
    padding: 10px;
    font-family: Courier;
  }

  .fr-video iframe {
    max-width: 100%;
  }

  ul,
  ol {
    list-style-image: none;
    list-style-position: outside;
    padding-inline-start: 2em;
    padding-left: 2em;

    vertical-align: baseline;
    margin: 1em 0;
  }

  ul ul,
  ol ul {
    list-style-type: circle;
    list-style-position: inside;
    margin-left: 15px;
  }

  ol ol,
  ul ol {
    list-style-type: lower-latin;
    list-style-position: inside;
    margin-left: 15px;
  }

  span.fr-img-caption.fr-dii.fr-fil {
    float: left;
    margin: 5px 5px 5px 0;
    max-width: calc(100% - 5px);
  }
  span.fr-img-caption.fr-dii.fr-fir {
    float: right;
    margin: 5px 0 5px 5px;
    max-width: calc(100% - 5px);
  }
  table {
    margin: 1rem 0;
    width: 100%;
    border-collapse: collapse;
    table-layout: fixed;
  }

  table th,
  table td {
    position: relative;
    padding: 0 0.5em;
    border: 1px solid rgba(0,0,0,0.075);
    font-weight: normal;
    text-align: left;
  }

  table th {
    font-weight: 500;
    background: rgba(0, 0, 0, 0.025);
  }
}

